Nieuwe templates toegevoegd, styling verbeterd, routes aangepast en requirements toegevoegd

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,8 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+          <!-- Auth0 Lock Script -->
+  <script src="https://cdn.auth0.com/js/lock/11.30/lock.min.js"></script>
+
+    <!-- Auth0 Lock Script -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+
+
 </head>
 <body>
+
+<h1>welkom op de index</h1>
+
+
+
+
 
 </body>
 </html>
