--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,8 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <script src="https://cdn.auth0.com/js/lock/11.30/lock.min.js"></script>
+
 </head>
 <body>
 
+
+
+
+<!-- Hoofdgedeelte -->
+{% block content %}{% endblock %}
+
+
+
+{% block scripts %}{% endblock %}
 </body>
 </html>
