--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <title>Title</title>
 
-          <!-- Auth0 Lock Script -->
+      <!-- Auth0 Lock Script -->
   <script src="https://cdn.auth0.com/js/lock/11.30/lock.min.js"></script>
 
-    <!-- Auth0 Lock Script -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+  <!-- CSS -->
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 
 
 </head>
 <body>
 
 <h1>welkom op de index</h1>
-
 
 
 
