de navigatiebar yeey

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,7 +9,7 @@
 <body>
 
 <header>
-  <div class="logo">LOGO</div>
+  <a href="./"><div class="logo">LOGO</div></a>
 
   <nav class="nav-links">
     <a href="#">Hoe het werkt</a>
@@ -20,8 +20,8 @@
     <div class="dropdown">
       <a href="#">Meer ▼</a>
       <div class="dropdown-menu">
-        <a href="#">Over ons</a><br>
-        <a href="#">Jobs</a>
+        <a href="#">optie 1</a><br>
+        <a href="#">optie 2</a>
       </div>
     </div>
   </nav>
