--- a/app/templates/maps.html
+++ b/app/templates/maps.html
@@ -21,8 +21,7 @@ crossorigin=""></script>
 <script>
 {% for marker in markers %}
 L.marker([{{ marker['lat'] }}, {{ marker['lon'] }}]).addTo(map)
-.bindPopup("{{ marker['popup'] }}")
-.openPopup();
+  .bindPopup("{{ marker['name'] | escape }}<br><img src='/static/images/bike.png' alt='bike' style='height: 16px; vertical-align: middle;'> {{ marker['free-bikes'] | escape }}   <img src='/static/images/lock-icon.png' alt='lock' style='height: 16px; vertical-align: middle;'> {{ marker['empty-slots'] | escape }}")
 {% endfor %}
 </script>
 </body>
