added to nav and added styling with maps

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,7 +14,7 @@
   <nav class="nav-links">
     <a href="#">Hoe het werkt</a>
     <a href="#">Tarieven</a>
-    <a href="#">Vind een fiets</a>
+    <a href="maps">Vind een fiets</a>
     <a href="#">Help</a>
     <a href="#">Contact</a>
     <div class="dropdown">
