--- a/app/templates/maps.html
+++ b/app/templates/maps.html
@@ -1,28 +1,26 @@
-<!doctype html>
-<html lang="en">
-<head>
-<title>Flask Leaflet Website</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="{{ url_for('static', filename='css/universal.css') }}" />
+{% extends "base.html" %}
+
+{% block head %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/maps.css') }}">
 
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
-integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
-crossorigin=""/>
-<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
-integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
-crossorigin=""></script>
-</head>
-<body>
-<div id="map"></div>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+          integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+          crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+            integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+            crossorigin=""></script>
+{% endblock %}
 
-<script src="{{ url_for('static', filename='js/maps.js') }}" /></script>
-<script>
-{% for marker in markers %}
-L.marker([{{ marker['lat'] }}, {{ marker['lon'] }}]).addTo(map)
-  .bindPopup("{{ marker['name'] | escape }}<br><img src='/static/images/bike.png' alt='bike' style='height: 16px; vertical-align: middle;'> {{ marker['free-bikes'] | escape }}   <img src='/static/images/lock-icon.png' alt='lock' style='height: 16px; vertical-align: middle;'> {{ marker['empty-slots'] | escape }}")
-{% endfor %}
-</script>
-</body>
-</html>
+{% block content %}
+    <div id="map"></div>
+{% endblock %}
+
+{% block scripts %}
+    <script src="{{ url_for('static', filename='js/maps.js') }}"></script>
+    <script>
+        {% for marker in markers %}
+            L.marker([{{ marker['lat'] }}, {{ marker['lon'] }}]).addTo(map)
+                .bindPopup("{{ marker['name'] | escape }}<br><img src='/static/images/bike.png' alt='bike' style='height: 16px; vertical-align: middle;'> {{ marker['free-bikes'] | escape }}   <img src='/static/images/lock-icon.png' alt='lock' style='height: 16px; vertical-align: middle;'> {{ marker['empty-slots'] | escape }}")
+        {% endfor %}
+    </script>
+{% endblock %}
