--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -9,10 +9,7 @@
 {% block content %}
 
 
-<h1>welkom op de login test</h1>
-
-
-<div id="auth0-login-box"></div>
+<div class="background"><div id="auth0-login-box"></div></div>
 
 {% endblock %}
 
