design van login klaar. auth0, html, css

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -9,7 +9,7 @@
 {% block content %}
 
 
-<div class="background"><div id="auth0-login-box"></div></div>
+ <div class="background"><div id="auth0-login-box"></div></div>
 
 {% endblock %}
 
@@ -41,7 +41,7 @@
 
 
       theme: {
-        primaryColor: '#000000',
+        primaryColor: '#2b2d42',
         backgroundColor: '#000000',
         logo: 'LOGO'
       },
