--- a/app/static/css/maps.css
+++ b/app/static/css/maps.css
@@ -1,6 +1,8 @@
 #map{
     width: 768px;
-    height: 650px;
+    height: 600px;
     margin: auto;
     margin-top: 50px;
+    margin-bottom: 50px;
+    border-radius: 3%;
 }
