knop register oke

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -28,7 +28,7 @@
 
   <div class="nav-buttons">
     <a href="/login" class="login">LOGIN</a>
-    <a href="/register" class="register">REGISTER</a>
+    <a href="/login" class="register">REGISTER</a>
   </div>
 </header>
 
