--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -17,6 +17,23 @@ header {
   flex-wrap: wrap;
 }
 
+
+/* Footer / Contactbalk */
+.footerwrapper {
+  background: url(../images/footerbalk.png);
+  background-size: 100vw;
+  background-position: bottom;
+    display: flex;
+    align-items: center;
+    color: white;
+    width: auto;
+    height: 80vh;
+    background-repeat: no-repeat;
+    margin: 20px;
+    background-color: white;
+    border-radius: 20px;
+}
+
 /* Logo links */
 .logo {
   font-weight: bold;
