--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,7 +9,7 @@
 <body>
 
 <header>
-  <a href="./"><div class="logo">LOGO</div></a>
+  <a href="./"><div class="logo"><img src="../static/images/LOGO2.png" alt="vrouw op fiets" width="100" height="50"></div></a>
 
   <nav class="nav-links">
     <a href="#">Hoe het werkt</a>
@@ -31,6 +31,35 @@
     <a href="/register" class="register">REGISTER</a>
   </div>
 </header>
+
+<footer>
+  <div class="footerwrapper">
+  <div class="fiets-image">
+    <img src="#" alt="vrouw op fiets">
+  </div>
+  <div class="copyright">
+    <p>Copyright Velo Antwerpen 2025 ALL Rights Reserved</p>
+  </div>
+  <div class="contact">
+    <h2>CONTACT</h2>
+    <ul>
+      <li>info@velo-antwerpen.be</li>
+      <li>Vosseschijnstraat 16-20 2030 Antwerpen</li>
+      <li>+32 (0)3 206 50 30</li>
+    </ul>
+  </div>
+  <div class="socials">
+    <ul>
+      <li><a href="#">Lin</a></li>
+      <li><a href="#">TikT</a></li>
+      <li><a href ="#">YT</a></li>
+      <li><a href="#">FB</a></li>
+      <li><a href="#">Insta</a></li>
+    </ul>
+  </div>
+
+  </div>
+</footer>
 
 <main>
   {% block content %}{% endblock %}
