testen of dit werkt

--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -40,7 +40,7 @@ header {
   background-color: white;
   color: #D1003C;
   padding: 6px 12px;
-  border-radius: 5px;
+  border-radius: 50%;
   font-size: 20px;
 }
 
