--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,5 +11,34 @@
 
 <h1>index pagina</h1>
 
+<footer>
+  <div class="footerwrapper">
+  <div class="fiets-image">
+    <img src="#" alt="vrouw op fiets">
+  </div>
+  <div class="copyright">
+    <p>Copyright Velo Antwerpen 2025 ALL Rights Reserved</p>
+  </div>
+  <div class="contact">
+    <h2>CONTACT</h2>
+    <ul>
+      <li>info@velo-antwerpen.be</li>
+      <li>Vosseschijnstraat 16-20 2030 Antwerpen</li>
+      <li>+32 (0)3 206 50 30</li>
+    </ul>
+  </div>
+  <div class="socials">
+    <ul>
+      <li><a href="#">Lin</a></li>
+      <li><a href="#">TikT</a></li>
+      <li><a href ="#">YT</a></li>
+      <li><a href="#">FB</a></li>
+      <li><a href="#">Insta</a></li>
+    </ul>
+  </div>
+
+  </div>
+</footer>
+
 {% endblock %}
 
