--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1,10 +1,58 @@
-/* === AUTH0 BOX === */
-.auth0-lock-widget {
-  border: 2px solid #ffffff;
-  border-radius: 16px !important;
-  padding: 20px;
-  background-color: rgba(0, 0, 0, 0.6) !important;
-  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
-
+.div1{
+  background: url("../images/div-1.png");
+  height: 80vh;
+  background-color: white;
+  border-radius: 20px;
+  margin: 20px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: right;
+  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.35);
 }
 
+.text-spot{
+  display: grid;
+  padding-top: 10rem;
+  padding-left: 2rem;
+}
+
+.blog-slider {
+  width: 95%;
+  position: relative;
+  max-width: 800px;
+  margin: auto;
+  background: #fff;
+  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
+  padding: 25px;
+  border-radius: 25px;
+  height: 400px;
+  transition: all .3s;
+}
+
+.bigtext{
+  font-family: 'Segoe UI';
+  font-weight: bolder;
+  font-size: 64px;
+}
+
+.smoltext{
+  font-family: 'Segoe UI';
+  display: block;
+  margin-top: 2rem;
+}
+
+/* Footer / Contactbalk */
+.footerwrapper {
+  background: url(../images/footerbalk.png);
+  background-size: 100vw;
+  background-position: bottom;
+    display: flex;
+    align-items: center;
+    color: white;
+    width: auto;
+    height: 80vh;
+    background-repeat: no-repeat;
+    margin: 20px;
+    background-color: white;
+    border-radius: 20px;
+}
