Kleine aanpassing nav-footer

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -96,7 +96,7 @@ But thanks anyways! :D </p>
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <script src="../static/js/swiper.js"></script>
 
-<footer>
+<footer id="footer">
   <div class="footerwrapper">
   <div class="fiets-image">
     <img src="#" alt="vrouw op fiets">
