legende voor rode labels, font family wijziging.

--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -1,8 +1,15 @@
 /* Algemene basisstijl */
+*{
+  font-family: "Segoe UI", sans-serif ;
+}
+.smoltext{
+  font-family: "Segoe UI", sans-serif;
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: "Segoe UI";
+
   background-color: #E9E9E9;
 }
 
