navbar link tarieven gelinkt aan sectie tarieven met een id.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,7 +13,7 @@
 
   <nav class="nav-links">
     <a href="#">Hoe het werkt</a>
-    <a href="#">Tarieven</a>
+    <a href="#card-wrapper">Tarieven</a>
     <a href="maps">Vind een fiets</a>
     <a href="#">Help</a>
     <a href="#footer">Contact</a>
