--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,7 +20,7 @@ Gebruik Velo voor een dag, een week of een jaar.</span>
 </div>
 
 <div class="div2 swiper">
-  <div class="card-wrapper">
+  <div id="card-wrapper" class="card-wrapper">
   <ul class="card-slider swiper-wrapper">
     <li class="card-item swiper-slide">
       <img src="https://res.cloudinary.com/muhammederdem/image/upload/q_60/v1535759872/kuldar-kalvik-799168-unsplash.webp" alt="idk lmao" class="card-image">
