Popup voor gesloten station gewijzigd.

--- a/app/templates/maps.html
+++ b/app/templates/maps.html
@@ -46,10 +46,20 @@
 
     // Loop door markers en voeg ze toe aan de kaart
     markers.forEach(function(marker) {
-        let customIcon = createCustomIcon(marker.status, marker['free-bikes'], marker['empty-slots']);
-        L.marker([marker.lat, marker.lon], { icon: customIcon })
-            .addTo(map)
-            .bindPopup(`${marker.name}<br><img src='/static/images/bike.png' alt='bike' style='height: 16px; vertical-align: middle;'> ${marker['free-bikes']} <img src='/static/images/lock-icon.png' alt='lock' style='height: 16px; vertical-align: middle;'> ${marker['empty-slots']}`);
-    });
+    let customIcon = createCustomIcon(marker.status, marker['free-bikes'], marker['empty-slots']);
+    let popupContent;
+    if (marker.status === 'CLS') {
+        popupContent = `${marker.name}<br><span style="color: red; font-weight: bold;">Closed</span>`;
+    } else {
+        popupContent = `
+            ${marker.name}<br>
+            <img src='/static/images/bike.png' alt='bike' style='height: 16px; vertical-align: middle;'> ${marker['free-bikes']}
+            <img src='/static/images/lock-icon.png' alt='lock' style='height: 16px; vertical-align: middle;'> ${marker['empty-slots']}
+        `;
+    }
+    L.marker([marker.lat, marker.lon], { icon: customIcon })
+        .addTo(map)
+        .bindPopup(popupContent);
+});
 </script>
 {% endblock %}
