--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -120,12 +120,14 @@
   transform: translateY(2px);
 }
 
+
 /* Footer / Contactbalk */
 .footerwrapper {
   background: url(../images/footerbalk.png);
   background-size: 100vw;
   background-position: bottom;
   display: flex;
+  position: relative;
   align-items: center;
   color: white;
   width: auto;
@@ -134,6 +136,41 @@
   margin: 20px;
   background-color: white;
   border-radius: 20px;
+}
+
+.socials {
+  position: absolute;
+  margin-right: 20px;
+  bottom: 0;
+  right: 0;
+}
+
+.socials img {
+  width: 50px;
+}
+
+.socials ul {
+  display: flex;
+  gap: 15px;
+  marker: none;
+}
+
+.copyright {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  margin-left: 20px;
+}
+
+.contact {
+  position: relative;
+  top: 7rem;
+  left: 9rem;
+}
+
+
+ul li {
+  list-style: none;
 }
 
 
