--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -99,14 +99,14 @@ But thanks anyways! :D </p>
 <footer id="footer">
   <div class="footerwrapper">
   <div class="fiets-image">
-    <img src="#" alt="vrouw op fiets">
+    <img src="../static/images/fietsvrouw.svg" style=" width: 450px">
   </div>
   <div class="copyright">
     <p>Copyright Velo Antwerpen 2025 ALL Rights Reserved</p>
   </div>
   <div class="contact">
-    <h2>CONTACT</h2>
-    <ul>
+    <h2 style="font-size:40px; margin-bottom:10px">CONTACT</h2>
+    <ul style="padding:0">
       <li>info@velo-antwerpen.be</li>
       <li>Vosseschijnstraat 16-20 2030 Antwerpen</li>
       <li>+32 (0)3 206 50 30</li>
@@ -114,11 +114,11 @@ But thanks anyways! :D </p>
   </div>
   <div class="socials">
     <ul>
-      <li><a href="#">Lin</a></li>
-      <li><a href="#">TikT</a></li>
-      <li><a href ="#">YT</a></li>
-      <li><a href="#">FB</a></li>
-      <li><a href="#">Insta</a></li>
+      <li><a href="#"><img src="../static/images/Logo_Linkedin.png"></a></li>
+      <li><a href="#"><img src="../static/images/Logo_Tiktok.png"></a></li>
+      <li><a href ="#"><img src="../static/images/Logo_Facebook.png"></a></li>
+      <li><a href="#"><img src="../static/images/Logo_Youtube.png"></a></li>
+      <li><a href="#"><img src="../static/images/Logo_Insta.png"></a></li>
     </ul>
   </div>
 
