--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -163,9 +163,12 @@
 }
 
 .contact {
-  position: relative;
-  top: 7rem;
-  left: 9rem;
+  position: absolute;
+  text-align: right;
+  font-weight: bold;
+  right: 20px;
+  bottom: 150px;
+  color: #4d4d4d;
 }
 
 
