kleine footer aanpassing 3.0

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -98,7 +98,7 @@ But thanks anyways! :D </p>
 
 <footer id="footer">
   <div class="footerwrapper">
-  <div class="fiets-image">
+  <div class="footerfiets">
     <img src="../static/images/fietsvrouw.svg" style=" width: 450px">
   </div>
   <div class="copyright">
