--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -157,9 +157,10 @@
 
 .copyright {
   position: absolute;
-  bottom: 0;
-  left: 0;
+  bottom: 2rem;
+  left: 3rem;
   margin-left: 20px;
+  color: #4d4d4d;
 }
 
 .contact {
@@ -169,6 +170,11 @@
   right: 20px;
   bottom: 150px;
   color: #4d4d4d;
+}
+
+.footerfiets {
+  position: relative;
+  left: 2rem;
 }
 
 
