--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -120,6 +120,18 @@
   transform: translateY(2px);
 }
 
+.div3{
+  background: url("../images/help.png");
+  height: 80vh;
+  background-color: white;
+  border-radius: 20px;
+  margin: 20px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: right;
+  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.35);
+}
+
 /* Footer / Contactbalk */
 .footerwrapper {
   background: url(../images/footerbalk.png);
