--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -92,6 +92,16 @@ But thanks anyways! :D </p>
   });
 </script>
 
+<div class="div3">
+  <div class="text-spot">
+    <h1 class="bigtext">NEED SOME <span class="clr-red">HELP?</span></h1>
+    <span class="smoltext">Jouw rit, jouw stad, jouw tempo.<br>
+we need more tekst here, Make some Vélocity <br>
+Gebruik Velo voor een dag, een week of een jaar.</span>
+    <img style="margin-top: 5px" src="../static/images/component1.svg">
+  </div>
+</div>
+
 <!--ook script van SwiperJS toevoegen natuurlijk-->
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <script src="../static/js/swiper.js"></script>
