--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -48,9 +48,9 @@ header {
   text-decoration: none;
   font-weight: 500;
   position: relative;
-    display: inline-block;
-    text-decoration: none;
-    color: white;
+  display: inline-block;
+  text-decoration: none;
+  transition: color 0.3s ease-out;
 }
 .nav-links a::after {
     content: '';
@@ -63,6 +63,9 @@ header {
     transform: scaleX(0);
     transform-origin: bottom right;
     transition: transform 0.3s ease-out;
+}
+.nav-links a:hover{
+  color: #2b2d42;
 }
 
 .nav-links a:hover::after {
