aanpassing z-index voor login en engels -> nederlands op index.html

--- a/app/static/css/login.css
+++ b/app/static/css/login.css
@@ -30,6 +30,7 @@
   padding: 20px;
   box-sizing: border-box;
   margin-right: 26%; /* duwt de box naar rechts in zijn container */
+    z-index: 50;
 }
 
 
