--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -94,9 +94,9 @@ But thanks anyways! :D </p>
 
 <div class="div3">
   <div class="text-spot">
-    <h1 class="bigtext">NEED SOME <span class="clr-red">HELP?</span></h1>
+    <h1 class="bigtext"><span class="clr-red">HULP</span> NODIG?</h1>
     <span class="smoltext">Jouw rit, jouw stad, jouw tempo.<br>
-we need more tekst here, Make some Vélocity <br>
+we hebben meer tekst nodig. Maak een beetje Vélocity <br>
 Gebruik Velo voor een dag, een week of een jaar.</span>
     <img style="margin-top: 5px" src="../static/images/component1.svg">
   </div>
@@ -112,7 +112,7 @@ Gebruik Velo voor een dag, een week of een jaar.</span>
     <img src="../static/images/fietsvrouw.svg" style=" width: 450px">
   </div>
   <div class="copyright">
-    <p>Copyright Velo Antwerpen 2025 ALL Rights Reserved</p>
+    <p>Copyright Velo Antwerpen 2025 ALLE RECHTEN VOORBEHOUDEN</p>
   </div>
   <div class="contact">
     <h2 style="font-size:40px; margin-bottom:10px">CONTACT</h2>
