ik heb base.html en instellingen.html aangepast en knop om naar instellingen te gaan toegevoegd

--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -8,6 +8,10 @@
 
 <h1>Pagina profile</h1>
 
+# knop instellingen
+<form action="{{ url_for('instellingen') }}">
+  <button type="submit">Instellingen</button>
+</form>
 
 
 </body>
