Tarieven pagina gedesigned met Jarno

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -33,14 +33,14 @@ I could just put lorum ipsum here but thats boring.
 Nothing beats a good copywriting in the morning, yup.
 Whoever is reading this, i'm sorry for wasting 3 minutes of your time.
 But thanks anyways! :D </p>
-        <a href="#"><button class="card-slider__button">KIES JE FORMULE</button></a>
+        <a href="/tarieven"><button class="card-slider__button">KIES JE FORMULE</button></a>
       </div>
       <button class="card-button">-></button>
     </li>
     <li class="card-item swiper-slide">
       <img src="https://res.cloudinary.com/muhammederdem/image/upload/q_60/v1535759872/kuldar-kalvik-799168-unsplash.webp" alt="idk lmao" class="card-image">
       <div class="card-item__content">
-        <h1 class="card-item__title">FORMULES EN <span class="clr-red">TARIEVEN</span></h1>
+        <h1 class="card-item__title">DEEL 2 EN <span class="clr-red">DEEL 2</span></h1>
         <img style="width: 90%;" src="../static/images/component1.svg">
         <p class="card-item__text">lorum ipsum and all that good stuff. We got tarifs, we got bikes!
 What more could you need? What i need right now is more text here.
@@ -48,14 +48,14 @@ I could just put lorum ipsum here but thats boring.
 Nothing beats a good copywriting in the morning, yup.
 Whoever is reading this, i'm sorry for wasting 3 minutes of your time.
 But thanks anyways! :D </p>
-        <button class="card-slider__button">KIES JE FORMULE</button>
+        <a href="#"><button class="card-slider__button">KIES JE FORMULE</button></a>
       </div>
       <button class="card-button">-></button>
     </li>
     <li class="card-item swiper-slide">
       <img src="https://res.cloudinary.com/muhammederdem/image/upload/q_60/v1535759872/kuldar-kalvik-799168-unsplash.webp" alt="idk lmao" class="card-image">
       <div class="card-item__content">
-        <h1 class="card-item__title">FORMULES EN <span class="clr-red">TARIEVEN</span></h1>
+        <h1 class="card-item__title">DEEL 3 EN <span class="clr-red">DEEL 3</span></h1>
         <img style="width: 90%;" src="../static/images/component1.svg">
         <p class="card-item__text">lorum ipsum and all that good stuff. We got tarifs, we got bikes!
 What more could you need? What i need right now is more text here.
