--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -28,7 +28,7 @@
       container: "auth0-login-box",
       auth: {
         redirect: true,
-        redirectUrl: 'http://127.0.0.1:8000/callback',
+        redirectUrl: 'http://127.0.0.1:8000/login',
 
         responseType: 'token id_token',
 
