opmaak van dagpas, weekpas en jaarkaart paginas

--- a/app/templates/tarieven/jaarkaart.html
+++ b/app/templates/tarieven/jaarkaart.html
@@ -14,30 +14,30 @@
 
 <form method="POST" action="/tarieven/jaarpas" class="form-container">
   <label for="voornaam">Voornaam:</label>
-  <input type="text" name="voornaam" required>
+  <input type="text" name="voornaam" required><br>
 
   <label for="achternaam">Achternaam:</label>
-  <input type="text" name="achternaam" required>
+  <input type="text" name="achternaam" required><br>
 
   <label for="email">E-mailadres:</label>
-  <input type="email" name="email" required>
+  <input type="email" name="email" required><br>
 
   <label for="telefoon">Telefoonnummer:</label>
-  <input type="tel" name="telefoon" required>
+  <input type="tel" name="telefoon" required><br>
 
   <label for="geboortedatum">Geboortedatum:</label>
-  <input type="date" name="geboortedatum" required>
+  <input type="date" name="geboortedatum" required><br>
 
   <label for="pincode">Pincode (4 cijfers):</label>
-  <input type="password" name="pincode" pattern="\d{4}" required>
+  <input type="password" name="pincode" pattern="\d{4}" required><br>
 
   <label for="bevestig_pincode">Bevestig Pincode:</label>
-  <input type="password" name="bevestig_pincode" pattern="\d{4}" required>
+  <input type="password" name="bevestig_pincode" pattern="\d{4}" required><br>
 
   <label>
     <input type="checkbox" name="voorwaarden" required>
     Ik ga akkoord met de <a href="/algemene-voorwaarden" target="_blank">algemene voorwaarden</a>
-  </label>
+  </label><br>
 
   <button type="submit">Aanvragen</button>
 </form>
